@@ -1801,8 +1801,8 @@
 			const seriesItem = addItem('div', {
 				className: 'series-item'
 			});
-			const LNG = ((serie.metadata.language != 'en') ? `<span style="background-image:url('flags/${serie.metadata.language}.svg')" class="fa-solid fa-square-full glyph-dark glyph-flag"></span>` : '');
-			const LTR = LTRvals[serie.metadata.readingDirection];
+			const LNG = serie.metadata?.language ? ((serie.metadata.language != 'en') ? `<span style="background-image:url('flags/${serie.metadata.language}.svg')" class="fa-solid fa-square-full glyph-dark glyph-flag"></span>` : '') : '';
+			const LTR = serie.metadata?.readingDirection ? LTRvals[serie.metadata.readingDirection] : '';
 			const spacer = ((LNG != '') && (LTR != '')) ? '&nbsp;' : '';
 
 			const seriesTitle = addItem('div', {
@@ -2500,7 +2500,7 @@
 			<div class="header-title">
 				<span class="title">
 				${serie.metadata.title}
-				${serie.metadata.language ? `<img width="20px" height="20px" style="margin-left:15px; margin-top:2px; vertical-align: top;" src="flags/${serie.metadata.language}.svg">` : ''}
+				${serie.metadata?.language ? `<img width="20px" height="20px" style="margin-left:15px; margin-top:2px; vertical-align: top;" src="flags/${serie.metadata.language}.svg">` : ''}
 				</span>
 				<span class="notes">
 					<a class="red search-trigger" href="javascript:navigateTo('#search?search_string=y:${altTitle.time}');">${altTitle.time}</a> (${serie.booksCount} ${serie.booksCount == 1 ? "book" : "books"}) - ${creditString}</span>
